--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
+# IDE
 .idea/
+
+# Dependencies
 backend/node_modules/
 frontend/node_modules/
 
+# Testing
+frontend/coverage
+
+#production
+frontend/build
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
 *.log
